--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -1,19 +1,3 @@
-name: Deploy static content to Pages
-
-on:
-  push:
-    branches: ["main"]
-  workflow_dispatch:
-
-permissions:
-  contents: read
-  pages: write
-  id-token: write
-
-concurrency:
-  group: "pages"
-  cancel-in-progress: false
-
 jobs:
   deploy:
     environment:
@@ -24,24 +8,24 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      # Change directory to vite-project to install dependencies and build the project
-      - name: Install dependencies and build project
-        run: |
-          cd vite-project  # Change to the vite-project directory
-          npm install      # Install dependencies
-          npm run build    # Run build (make sure 'build' is defined in package.json)
+      - name: Setup Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: '18'
 
-      # Setup Pages for deployment
-      - name: Setup Pages
-        uses: actions/configure-pages@v5
+      - name: Install Dependencies
+        working-directory: ./vite-project
+        run: npm install
 
-      # Upload the build output folder (e.g., dist or build)
+      - name: Build Project
+        working-directory: ./vite-project
+        run: npm run build
+
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: 'vite-project/dist'  # Adjust this path to where your build output is located
+          path: './vite-project/dist'
 
-      # Deploy to GitHub Pages
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
